# fix

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt
.claude/agents/: README.md
.github/: copilot-instructions.md
.github/agents/: README.md
.github/workflows/: build-binaries.yml  ci.yml  pages.yml  publish-packages.yml  release.yml  test-distros.yml  test-e2e-matrix.yml  test-install.yml  test-windows-shells.yml  test-wsl.yml
.plans/: ml-pipeline-automation.md  ml-pipeline-kaggle.md
cmd-correct-cli/: Cargo.toml  README.md
cmd-correct-cli/src/: main.rs
data/final/: test.jsonl  valid.jsonl  validation.jsonl
docs/: ARCHITECTURE.md  HANDOFF.md  HISTORY.md  README.md  TECH_SPECS.md  testing-strategy.md
docs/ADR/: 000-template.md  001-dual-backend-inference.md  001-gguf-model-format.md  002-lora-fine-tuning.md  002-metal-gpu-acceleration.md  003-base-model-selection.md  003-cross-platform-support.md  004-rust-cli-implementation.md  005-huggingface-model-distribution.md  005-synthetic-data-generation.md  006-cross-platform-testing-strategy.md
docs/agent-instructions/: 00-core-philosophy.md  01-research-and-web.md  02-testing-and-validation.md  03-tooling-and-pipelines.md  README.md
docs/specs/: README.md
fix-cli/: Cargo.toml  README.md
fix-cli/src/: agent.rs  cache.rs  discovery.rs  lib.rs  main.rs  parser.rs  progress.rs  tools.rs
fix-cli/tests/: agent_test.rs  cache_test.rs  cli_test.rs  config_test.rs  discovery_test.rs  e2e_test.rs  e2e_wit_test.rs  fix_daemon_test.rs  wit_cli_test.rs  wit_daemon_test.rs  wit_test.rs  wsl_test.rs
scripts/: generate_data.py  validate.sh  verify_dataset.py
src/data_generation/: __init__.py
src/data_generation/generators/: __init__.py  base_generator.py  chained_command_gen.py  natural_lang_gen.py  single_command_gen.py  tools_gen.py
src/data_generation/templates/: bash.yaml  cmd.yaml  fish.yaml  powershell.yaml  tcsh.yaml  zsh.yaml
website/: index.html  install.cmd  install.ps1  install.sh  style.css
