[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd-correct"
version = "0.1.0"
description = "A fine-tuned LLM for universal shell command correction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Animesh Kundu"}
]
keywords = ["llm", "command-line", "shell", "correction", "fine-tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.30",
    "tiktoken>=0.5",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
train-mlx = [
    "mlx>=0.12",
    "mlx-lm>=0.12",
]
train-torch = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.19",
    "accelerate>=0.29",
]
inference = [
    "llama-cpp-python>=0.2",
    "gguf>=0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "cmd-correct[train-mlx,train-torch,inference,dev]",
]

[project.scripts]
cmd-correct = "src.inference.cli:app"

[project.urls]
Homepage = "https://github.com/animeshkundu/cmd-correct"
Repository = "https://github.com/animeshkundu/cmd-correct"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
