[package]
name = "cmd-correct"
version = "0.1.0"
edition = "2021"
description = "AI-powered shell command corrector"
license = "MIT"

[dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }
llama-cpp-sys-2 = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
