[package]
name = "fix"
version = "0.0.15"
edition = "2021"
description = "AI-powered shell command corrector"
license = "MIT"

[lib]
name = "fix_lib"
path = "src/lib.rs"

[[bin]]
name = "fix"
path = "src/bin/fix.rs"

[[bin]]
name = "wit"
path = "src/bin/wit.rs"

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
llama-cpp-2 = { version = "0.1", default-features = false }
llama-cpp-sys-2 = { version = "0.1", default-features = false }
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
